# content-type-converter

./: .coveragerc  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
app/: __init__.py
app/main/: __init__.py  routes.py
app/templates/: base.html
app/templates/xwwwformurlencoded2json/: invalid.html
app/xwwwformurlencoded2json/: __init__.py  routes.py
content_type_converter/: __main__.py
tests/: test_app.py  test_content_type_converter.py
