[tool.poetry]
name = "content-type-converter"
version = "0.1.0"
description = "Convert HTTP POST `Content-Type`, for instance from `application/x-www-form-urlencoded` to `application/json`."
authors = ["Emilien Klein <emilien@klein.st>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.3"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
