[tool.poetry]
name = "content-type-converter"
version = "0.1.0"
description = "Convert HTTP POST `Content-Type`, for instance from `application/x-www-form-urlencoded` to `application/json`."
authors = ["Emilien Klein <emilien@klein.st>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/e2jk/content-type-converter"
repository = "https://github.com/e2jk/content-type-converter"
keywords = ["HTTP", "POST", "Content-Type", "application/x-www-form-urlencoded", "application/json"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Proxy Servers",
]
include = [
    "LICENSE",
]

[tool.poetry.urls]
"Issue tracker" = "https://github.com/e2jk/content-type-converter/issues"

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
python-dotenv = "^0.17.0"
flask-wtf = "^0.15.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.3"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^6.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
